discussion/kv_engine/129049/129049_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Make Configuration::addStats use StatCollector

Note, does _not_ add definitions to stats.defs.h - keys are pulled from
the config, which is defined by configuration.json. Duplicating the
definitions would be of little benefit.

Change-Id: I09686a0e016860630492055cba863ad29610749b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-26 16:39:50.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-26 19:05:59.000000000
Message: 
Patch Set 17: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3999/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/stats_config.def.h:20:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
STAT(ep_access_scanner_enabled, none, , , )
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/stats_config.def.h:20:6: error: use of undeclared identifier "ep_access_scanner_enabled" [clang-diagnostic-error]
STAT(ep_access_scanner_enabled, none, , , )
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/stats_config.def.h:20:33: error: use of undeclared identifier "none" [clang-diagnostic-error]
STAT(ep_access_scanner_enabled, none, , , )
                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/stats_config.def.h:20:39: error: expected expression [clang-diagnostic-error]
STAT(ep_access_scanner_enabled, none, , , )
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/stats_config.def.h:20:41: error: expected expression [clang-diagnostic-error]
STAT(ep_access_scanner_enabled, none, , , )
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/stats_config.def.h:20:43: error: expected expression [clang-diagnostic-error]
STAT(ep_access_scanner_enabled, none, , , )
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/stats_config.def.h:20:44: error: expected ";" after top level declarator [clang-diagnostic-error]
STAT(ep_access_scanner_enabled, none, , , )
                                           ^
                                           ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/statistics/stats.def.h:62:2: error: A STAT macro must be defined before including stats.def.h [clang-diagnostic-error]
#error A STAT macro must be defined before including stats.def.h
 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3999/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/kv_engine/engines/ep/src/stats_config.def.h:20:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3999/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29789/ : FAILURE

Link error: fatal error LNK1168: cannot open platform\platform_so.dll for writing ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29789/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4328/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0028/0158]: bloomfilter conf...../kv_engine/engines/ep/tests/ep_testsuite.cc:2875 Test failed: `" (Expected `0.1", got `0" - Incorrect initial bfilter_residency_threshold.)
[2020-08-26T18:23:34.538Z] (9 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4328/ )

Failure of GoogleTest "FullAndValueEviction/DatatypeStatTest.datatypesInitiallyZero/value_only":

<pre>
[ RUN      ] FullAndValueEviction/DatatypeStatTest.datatypesInitiallyZero/value_only
[2020-08-26T18:23:16.449Z] unknown file: Failure
[2020-08-26T18:23:16.449Z] C++ exception with description "stoi: no conversion" thrown in the test body.
[2020-08-26T18:23:16.449Z] [  FAILED  ] FullAndValueEviction/DatatypeStatTest.datatypesInitiallyZero/value_only, where GetParam() = "value_only" (5 ms)
FullAndValueEviction/DatatypeStatTest.datatypesInitiallyZero/value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4328/ )

Failure of a CTest test [2020-08-26T18:23:16.449Z]   1/410 Test #219: ep-engine_ep_unit_tests.FullAndValueEviction/DatatypeStatTest ............................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4328/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5409/ : FAILURE

Failure of GoogleTest "FullAndValueEviction/DatatypeStatTest.datatypesInitiallyZero/value_only":

<pre>
[ RUN      ] FullAndValueEviction/DatatypeStatTest.datatypesInitiallyZero/value_only
[2020-08-26T18:22:04.828Z] unknown file: Failure
[2020-08-26T18:22:04.828Z] C++ exception with description "stoi" thrown in the test body.
[2020-08-26T18:22:04.828Z] [  FAILED  ] FullAndValueEviction/DatatypeStatTest.datatypesInitiallyZero/value_only, where GetParam() = "value_only" (34 ms)
FullAndValueEviction/DatatypeStatTest.datatypesInitiallyZero/value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5409/ )

Failure of an engine_testapp test:

<pre>
Running [0028/0158]: bloomfilter conf...../kv_engine/engines/ep/tests/ep_testsuite.cc:2875 Test failed: `" (Expected `0.1", got `0" - Incorrect initial bfilter_residency_threshold.)
[2020-08-26T18:22:32.521Z] (125 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5409/ )

Failure of a CTest test [2020-08-26T18:22:04.828Z]   1/391 Test #210: ep-engine_ep_unit_tests.FullAndValueEviction/DatatypeStatTest ............................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5409/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5217/ : FAILURE

Compile error at [2020-08-26T18:08:03.125Z] ../kv_engine/include/statistics/stats.def.h:66:10:
fatal error: stats_config.def.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5217/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5306/ : FAILURE

Compile error at [2020-08-26T17:38:19.753Z] ../kv_engine/include/statistics/stats.def.h:66:10:
fatal error: stats_config.def.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5306/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13127/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2525/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25820/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
